--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     background-attachment:fixed;
   }
   p {
-  font-size: 12px; /* 改成你要的大小 */
-  line-height: 1.4; /* 行距建議一起調整 */
+  font-size: 1.1em; /* 改成你要的大小 */
+  line-height: 1.6; /* 行距建議一起調整 */
 }
   .highlight-text {
   color: #43C7C7;   /* 紅色 */
