--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       Saddle Up for Creativity Where Ponies Meet Imagination!<br>
       This Lunar New Year,<br> 
       create your very own Fancy Pony! <br>
-      Families and young artists are invited to design a colorful,<br>
+      Families and young artists are invited to design a colorful,
       letter-sized pony drawing bursting with festive spirit!<br> 
       <span class="highlight-text">The Magic in 3 Steps:</span><br>
       <span class="highlight-text">Create. Celebrate. Capture.</span><br> 
