--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     background-attachment:fixed;
   }
   p {
-  font-size: 1.1em; /* 改成你要的大小 */
-  line-height: 1.6; /* 行距建議一起調整 */
+  font-size: 0.9em; /* 改成你要的大小 */
+  line-height: 1.4; /* 行距建議一起調整 */
 }
   .highlight-text {
   color: #43C7C7;   /* 紅色 */
@@ -171,7 +171,7 @@
       Saddle Up for Creativity Where Ponies Meet Imagination!<br>
       This Lunar New Year,<br> 
       create your very own Fancy Pony! <br>
-      Families and young artists are invited to design a colorful,
+      Families and young artists are invited to design a colorful,<br>
       letter-sized pony drawing bursting with festive spirit!<br> 
       <span class="highlight-text">The Magic in 3 Steps:</span><br>
       <span class="highlight-text">Create. Celebrate. Capture.</span><br> 
