--- a/index.html
+++ b/index.html
@@ -179,8 +179,10 @@
       see it feature on our paper bags,<br>
       and showcase it on the Pony Parade Wall. <br> 
       Don’t forget your photo finish!</b> 
-      Let’s fill the celebration with color, creativity, and joy.<br>
-      Submit your Fancy Pony today and join the parade!
+      Let’s fill the celebration<br>  
+      with color, creativity, and joy.<br>
+      <span class="highlight-text">Submit your Fancy Pony today</span><br> 
+      <span class="highlight-text">and join the parade!</span>
     </p>
 
     <!-- Form -->
