--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
   font-size: 1.2em;  /* 單獨變大 */
   font-weight: bold; /* 可以再加粗 */
 }
+  .highlight-text1 {
+  color: #3A3A3A;   /* 紅色 */
+  font-size: 1.2em;  /* 單獨變大 */
+  font-weight: Semi Bold; /* 可以再加粗 */
+}
   /* 背景版權文字（單行置底置中） */
   .bg-credit{
     position:fixed; bottom:8px; left:50%; transform:translateX(-50%);
@@ -173,8 +178,8 @@
       create your very own Fancy Pony! <br>
       Families and young artists are invited to design a colorful,<br>
       letter-sized pony drawing bursting with festive spirit!<br> 
-      <span class="highlight-text">The Magic in 3 Steps:</span><br>
-      <span class="highlight-text">Create. Celebrate. Capture.</span><br> 
+      <span class="highlight-text1">The Magic in 3 Steps:</span><br>
+      <span class="highlight-text1">Create. Celebrate. Capture.</span><br> 
       Submit your pony artwork,<br> 
       see it feature on our paper bags,<br>
       and showcase it on the Pony Parade Wall. <br> 
