--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Fancy Pony — Artwork Submission</title>
 <style>
   :root{
+    --DCES:#2563EB;
     --brand:#43C7C7;
     --ok:#16a34a;
     --warn:#b45309;
@@ -55,6 +56,7 @@
     font-size:1em; line-height:1.4;
   }
   h1 { margin: 0 0 8px 0; text-align: center; letter-spacing: .3px; }
+  h1 .title-main-DCES { display:block; font-size:clamp(1.2em, 5vw, 1.4em); font-weight:900; color:var(--DCES);}
   h1 .title-main { display:block; font-size:clamp(1.6em, 5vw, 1.8em); font-weight:900; }
   h1 .title-sub  { display:block; font-size:clamp(1.2em, 3vw, 1.4em); font-weight:600; color:var(--muted); }
 
@@ -169,6 +171,7 @@
     <!-- Logo + Title -->
     <img class="logo" src="https://i.postimg.cc/xdB0mqvM/The-unicorn-in-the-sky.png" />
     <h1>
+      <span class="title-main-DCES">DCES</span>
       <span class="title-main">Fancy Pony</span>
       <span class="title-sub">Artwork Submission</span>
     </h1>
