--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   .btn-file{
     display:inline-block; padding:10px 16px; border-radius:12px;
     background:var(--brand); color:#fff; font-weight:800; border:none; cursor:pointer;
-    transition:filter .12s ease, transform .02s ease;
+    transition:filter .12s ease, transform .02s ease;font-size: 1.1em;
   }
   .btn-file:hover{filter:brightness(1.05)}
   .btn-file:active{transform:translateY(1px)}
