--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   .btn{
     display:inline-block; padding:12px 18px; border-radius:14px; border:none;
     background:var(--brand); color:#fff; font-weight:900; cursor:pointer;
-    transition:filter .12s ease, transform .02s ease;
+    transition:filter .12s ease, transform .02s ease;font-size: 1.1em;
   }
   .btn:hover{filter:brightness(1.05)}
   .btn:active{transform:translateY(1px)}
