--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Fancy Pony — Artwork Submission</title>
+<title>Fancy Pony Parade — Artwork Submission</title>
 <style>
   :root{
     --DCES:#2563EB;
@@ -174,23 +174,23 @@
     </h1>
     <img class="logo" src="https://i.postimg.cc/xdB0mqvM/The-unicorn-in-the-sky.png" />
     <h1>
-      <span class="title-main">Fancy Pony</span>
+      <span class="title-main">Fancy Pony Parade</span>
       <span class="title-sub">Artwork Submission</span>
     </h1>
     <p class="intro">
       Saddle Up for Creativity Where Ponies Meet Imagination!<br>
-      This Lunar New Year,<br> 
-      create your very own Fancy Pony! <br>
-      Families and young artists are invited to design a colorful,<br>
-      letter-sized pony drawing bursting with festive spirit!<br> 
+      This Lunar New Year, create your very own Fancy Pony! <br>
+      Families and young artists are invited to<br>  
+      design a colorful, letter-sized pony drawing<br> 
+      bursting with festive spirit!<br> 
       <span class="highlight-text1">The Magic in 3 Steps:</span><br>
       <span class="highlight-text1">Create. Celebrate. Capture.</span><br> 
       Submit your pony artwork,<br> 
       see it feature on our paper bags,<br>
       and showcase it on the Pony Parade Wall. <br> 
       Don’t forget your photo finish!</b> 
-      Let’s fill the celebration<br>  
-      with color, creativity, and joy.<br>
+      Let’s fill the celebration with<br>  
+      color, creativity, and joy.<br>
       <span class="highlight-text">Submit your Fancy Pony today</span><br> 
       <span class="highlight-text">and join the parade!</span>
     </p>
