--- a/index.html
+++ b/index.html
@@ -171,12 +171,9 @@ input[type="checkbox"]{ transform:scale(1.35); margin-right:6px }
 
   <main class="wrap">
     <!-- Logo + Title -->
-    <h1>
-      <span class="title-main-DCES">DCES</span>
-    </h1>
     <img class="logo" src="https://i.postimg.cc/xdB0mqvM/The-unicorn-in-the-sky.png" />
     <h1>
-      <span class="title-main">Fancy Pony Parade</span>
+      <span class="title-main"><span class="title-main-DCES">DCES</span> Fancy Pony Parade</span>
       <span class="title-sub">Artwork Submission</span>
     </h1>
     <p class="intro">
@@ -186,32 +183,20 @@ input[type="checkbox"]{ transform:scale(1.35); margin-right:6px }
 </p>
 
 <p class="intro">
-  Families and young artists are invited to design a colorful, letter-sized
-  pony drawing bursting with festive spirit!
-</p>
-
-<p class="intro"><strong>The Magic in 3 Steps:</strong></p>
-<ul class="intro list">
-  <li>Create</li>
-  <li>Celebrate</li>
-  <li>Capture</li>
-</ul>
-
-<p class="intro"><strong>Submit your pony artwork to:</strong></p>
-<ul class="intro list">
-  <li>Feature on our paper bags</li>
-  <li>Showcase on the Pony Parade Wall</li>
-  <li>Be part of the celebration!</li>
-</ul>
-
-<p class="intro">
-  Don’t forget your photo finish! Let’s fill the celebration with
-  color, creativity, and joy.
-</p>
-
-<p class="intro">
-  <span class="highlight-text">Submit your Fancy Pony today</span>
-  <span class="br-lg"><br></span>
+  Saddle Up for Creativity Where Ponies Meet Imagination!<br>
+  This Lunar New Year, create your very own Fancy Pony! <br>
+  Families and young artists are invited to<br>  
+  design a colorful, letter-sized pony drawing<br> 
+  bursting with festive spirit!<br> 
+  <span class="highlight-text1">The Magic in 3 Steps:</span><br>
+  <span class="highlight-text1">Create. Celebrate. Capture.</span><br> 
+  Submit your pony artwork,<br> 
+  see it feature on our paper bags,<br>
+  and showcase it on the Pony Parade Wall. <br> 
+  Don’t forget your photo finish!<br> 
+  Let’s fill the celebration with<br>  
+  color, creativity, and joy.<br>
+  <span class="highlight-text">Submit your Fancy Pony today</span><br> 
   <span class="highlight-text">and join the parade!</span>
 </p>
     <!-- Form -->
