--- a/index.html
+++ b/index.html
@@ -173,15 +173,13 @@ input[type="checkbox"]{ transform:scale(1.35); margin-right:6px }
     <!-- Logo + Title -->
     <img class="logo" src="https://i.postimg.cc/xdB0mqvM/The-unicorn-in-the-sky.png" />
     <h1>
-      <span class="title-main"><span class="title-main-DCES">DCES</span> Fancy Pony Parade</span>
+      <span class="title-main"><span class="title-main-DCES">DCES</span>Fancy Pony Parade</span>
       <span class="title-sub">Artwork Submission</span>
     </h1>
     <p class="intro">
-  Saddle Up for Creativity Where Ponies Meet Imagination!
-  <span class="br-lg"><br></span>
+  <span class="br-lg">Saddle Up for Creativity Where Ponies Meet Imagination!</span><br>
   This Lunar New Year, create your very own Fancy Pony!
 </p>
-
 <p class="intro">
   Saddle Up for Creativity Where Ponies Meet Imagination!<br>
   This Lunar New Year, create your very own Fancy Pony! <br>
