--- a/index.html
+++ b/index.html
@@ -4,199 +4,195 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Fancy Pony Parade — Artwork Submission</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 <style>
   :root{
-  --DCES:#2563EB;
-  --brand:#43C7C7;
-  --ok:#16a34a;
-  --warn:#b45309;
-  --err:#b91c1c;
-  --ink:#0f172a;
-  --muted:#3A3A3A;
-  --card-bg: rgba(255,255,255,0.92);
-}
+    --DCES:#2563EB;
+    --brand:#43C7C7;
+    --ok:#16a34a;
+    --warn:#b45309;
+    --err:#b91c1c;
+    --ink:#0f172a;
+    --muted:#3A3A3A;
+    --card-bg: rgba(255,255,255,0.92);
+  }
 
-/* base */
-html,body{height:100%}
-body{
-  margin:0;
-  font:16px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji";
-  color:var(--ink);
-  background-image:url('https://i.postimg.cc/jSmGH445/Pony.png');
-  background-repeat:repeat;
-  background-size:220px auto;
-  background-attachment:fixed;
-}
-p{ font-size:.6em; line-height:1.4; }
+  /* base */
+  html,body{height:100%}
+  body{
+    margin:0;
+    font:16px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji";
+    color:var(--ink);
+    background-image:url('https://i.postimg.cc/jSmGH445/Pony.png');
+    background-repeat:repeat;
+    background-size:220px auto;
+    background-attachment:fixed;
+  }
+  p{ font-size:.6em; line-height:1.4; }
 
-/* 內文區：單一定義 */
-.intro{
-  max-width:42rem;
-  margin:0 auto 1.25rem auto;
-  text-align:center;
-  font-size:clamp(12px,2.2vw,14px);
-  line-height:1.55;
-}
+  /* 內文區 */
+  .intro{
+    max-width:42rem;
+    margin:0 auto 1.25rem auto;
+    text-align:center;
+    font-size:clamp(12px,2.2vw,14px);
+    line-height:1.55;
+  }
 
-/* 三步驟 & 成果清單 */
-.list{ list-style:none; padding:0; margin:.5rem 0 1rem 0; }
-.list li{ margin:.15rem 0; }
-.list li::before{ content:"• "; font-weight:800; color:var(--brand); }
+  /* 只在大螢幕顯示換行 */
+  .br-lg{ display:none; }
+  @media (min-width:900px){ .br-lg{ display:inline; } }
 
-/* 只在大螢幕顯示換行 */
-.br-lg{ display:none; }
-@media (min-width:900px){ .br-lg{ display:inline; } }
+  /* CTA 強調 */
+  .highlight-text{
+    display:inline-block;
+    font-weight:800;
+    color:#08b3b3;
+  }
+  .highlight-text1{
+    color:var(--muted);
+    font-size:1.2em;
+    font-weight:600;
+  }
 
-/* CTA 強調 */
-.highlight-text{
-  display:inline-block;
-  font-weight:800;
-  color:#08b3b3;
-}
-.highlight-text1{
-  color:var(--muted);
-  font-size:1.2em;
-  font-weight:600; /* 修正合法值 */
-}
+  /* 背景版權 */
+  .bg-credit{
+    position:fixed; bottom:8px; left:50%; transform:translateX(-50%);
+    font-size:12px; color:#444; background:rgba(255,255,255,0.55);
+    padding:3px 8px; border-radius:6px; pointer-events:none; white-space:nowrap;
+  }
 
-/* 背景版權 */
-.bg-credit{
-  position:fixed; bottom:8px; left:50%; transform:translateX(-50%);
-  font-size:12px; color:#444; background:rgba(255,255,255,0.55);
-  padding:3px 8px; border-radius:6px; pointer-events:none; white-space:nowrap;
-}
+  /* 外框 */
+  .wrap{
+    max-width:900px; margin:32px auto; padding:20px 18px;
+    background:var(--card-bg); border-radius:16px; box-shadow:0 6px 20px rgba(0,0,0,.08);
+  }
 
-/* 外框 */
-.wrap{
-  max-width:900px; margin:32px auto; padding:20px 18px;
-  background:var(--card-bg); border-radius:16px; box-shadow:0 6px 20px rgba(0,0,0,.08);
-}
+  /* header */
+  .logo{ display:block; margin:0 auto 10px; width:clamp(200px,80%,300px); height:auto; }
+  h1{ margin:0 0 8px 0; text-align:center; letter-spacing:.3px; }
+  h1 .title-main-DCES{ display:block; font-size:clamp(.4em,5vw,0.6em); font-weight:900; color:var(--DCES); }
+  h1 .title-main{ display:block; font-size:clamp(1.2em,5vw,1.4em); font-weight:900; }
+  h1 .title-sub{ display:block; font-size:clamp(0.8em,3vw,1em); font-weight:600; color:var(--muted); }
 
-/* header（合併 h1 定義） */
-.logo{ display:block; margin:0 auto 10px; width:clamp(200px,80%,300px); height:auto; }
-h1{ margin:0 0 8px 0; text-align:center; letter-spacing:.3px; }
-h1 .title-main-DCES{ display:block; font-size:clamp(.4em,5vw,0.6em); font-weight:900; color:var(--DCES); }
-h1 .title-main{ display:block; font-size:clamp(1.2em,5vw,1.4em); font-weight:900; }
-h1 .title-sub{ display:block; font-size:clamp(0.8em,3vw,1em); font-weight:600; color:var(--muted); }
+  /* 表單 */
+  .grid{display:block}
+  .field{margin:14px 0}
+  label{display:block; font-weight:700; margin-bottom:6px}
+  input[type="text"], input[type="email"], textarea{
+    width:100%; box-sizing:border-box; padding:12px 14px; margin:8px 0;
+    border:1px solid #e5e7eb; border-radius:12px; background:#fff; font-size:1rem;
+  }
+  textarea{min-height:80px; resize:vertical}
 
-/* 表單 */
-.grid{display:block}
-.field{margin:14px 0}
-label{display:block; font-weight:700; margin-bottom:6px}
-input[type="text"], input[type="email"], textarea{
-  width:100%; box-sizing:border-box; padding:12px 14px; margin:8px 0;
-  border:1px solid #e5e7eb; border-radius:12px; background:#fff; font-size:1rem;
-}
-textarea{min-height:80px; resize:vertical}
+  /* 檔案選擇 */
+  .file-row{display:flex; align-items:center; gap:12px}
+  .file-wrap{position:relative; display:inline-block}
+  .file-wrap input[type="file"]{position:absolute; inset:0; opacity:0; cursor:pointer}
+  .btn-file{
+    display:inline-block; padding:10px 16px; border-radius:12px;
+    background:var(--brand); color:#fff; font-weight:800; border:none; cursor:pointer;
+    transition:filter .12s ease, transform .02s ease; font-size:1.1em;
+  }  
+  .btn-file:hover{filter:brightness(1.05)}
+  .btn-file:active{transform:translateY(1px)}
+  .file-name{font-size:14px; color:var(--muted)}
 
-/* 檔案選擇 */
-.file-row{display:flex; align-items:center; gap:12px}
-.file-wrap{position:relative; display:inline-block}
-.file-wrap input[type="file"]{position:absolute; inset:0; opacity:0; cursor:pointer}
-.btn-file{
-  display:inline-block; padding:10px 16px; border-radius:12px;
-  background:var(--brand); color:#fff; font-weight:800; border:none; cursor:pointer;
-  transition:filter .12s ease, transform .02s ease; font-size:1.1em;
-}
-.btn-file:hover{filter:brightness(1.05)}
-.btn-file:active{transform:translateY(1px)}
-.file-name{font-size:14px; color:var(--muted)}
+  .agree{display:flex; gap:10px; align-items:flex-start; margin:18px 0}
+  .agree input{margin-top:3px}
+  input[type="checkbox"]{ transform:scale(1.35); margin-right:6px }
 
-.agree{display:flex; gap:10px; align-items:flex-start; margin:18px 0}
-.agree input{margin-top:3px}
-input[type="checkbox"]{ transform:scale(1.35); margin-right:6px }
+  /* 主要按鈕 */
+  .btn{
+    display:inline-block; padding:12px 18px; border-radius:14px; border:none;
+    background:var(--brand); color:#fff; font-weight:900; cursor:pointer;
+    transition:filter .12s ease, transform .02s ease; font-size:1.1em;
+  }
+  .btn:hover{filter:brightness(1.05)}
+  .btn:active{transform:translateY(1px)}
+  .btn[disabled]{opacity:.6; cursor:not-allowed}
 
-/* 主要按鈕 */
-.btn{
-  display:inline-block; padding:12px 18px; border-radius:14px; border:none;
-  background:var(--brand); color:#fff; font-weight:900; cursor:pointer;
-  transition:filter .12s ease, transform .02s ease; font-size:1.1em;
-}
-.btn:hover{filter:brightness(1.05)}
-.btn:active{transform:translateY(1px)}
-.btn[disabled]{opacity:.6; cursor:not-allowed}
+  /* 狀態與進度條 */
+  .status{margin:12px 0 6px 0; font-weight:700}
+  .ok{color:var(--ok)} .warn{color:var(--warn)} .err{color:var(--err)}
+  .sub{color:var(--muted); font-weight:600}
+  .bar{height:8px; background:#e5e7eb; border-radius:999px; overflow:hidden; margin-top:10px}
+  .bar>i{display:block; height:100%; width:0%; background:linear-gradient(90deg,var(--brand),var(--ok)); transition:width .2s ease}
 
-/* 狀態與進度條 */
-.status{margin:12px 0 6px 0; font-weight:700}
-.ok{color:var(--ok)} .warn{color:var(--warn)} .err{color:var(--err)}
-.sub{color:var(--muted); font-weight:600}
-.bar{height:8px; background:#e5e7eb; border-radius:999px; overflow:hidden; margin-top:10px}
-.bar>i{display:block; height:100%; width:0%; background:linear-gradient(90deg,var(--brand),var(--ok)); transition:width .2s ease}
+  /* Recent submissions（左右切頁） */
+  .panel{margin-top:26px; padding:18px; background:var(--card-bg); border-radius:16px}
+  .panel-header{display:flex; flex-wrap:wrap; justify-content:space-between; align-items:center; gap:10px}
+  .panel-header h2{margin:0; font-size:26px}
+  .panel-info{color:var(--muted); font-weight:600}
+  .actions{display:flex; gap:12px; align-items:center}
+  .a{color:var(--brand); text-decoration:none; font-weight:800}
+  .a:hover{text-decoration:underline}
 
-/* Recent submissions（左右切頁） */
-.panel{margin-top:26px; padding:18px; background:var(--card-bg); border-radius:16px}
-.panel-header{display:flex; flex-wrap:wrap; justify-content:space-between; align-items:center; gap:10px}
-.panel-header h2{margin:0; font-size:26px}
-.panel-info{color:var(--muted); font-weight:600}
-.actions{display:flex; gap:12px; align-items:center}
-.a{color:var(--brand); text-decoration:none; font-weight:800}
-.a:hover{text-decoration:underline}
+  /* 為箭頭預留左右空間 */
+  .list-wrap{ position:relative; padding:0 50px; }
+  .list{display:flex; flex-direction:column; gap:10px; min-height:170px}
+  .item{padding:12px; border:1px solid #e5e7eb; border-radius:12px; background:#fff}
+  .ttl{font-weight:800}
+  .desc{margin-top:4px; white-space:pre-wrap}
+  .subline{font-size:13px; color:var(--muted)}
 
-/* 為箭頭預留左右空間 */
-.list-wrap{ position:relative; padding:0 50px; }
-.list{display:flex; flex-direction:column; gap:10px; min-height:170px}
-.item{padding:12px; border:1px solid #e5e7eb; border-radius:12px; background:#fff}
-.ttl{font-weight:800}
-.desc{margin-top:4px; white-space:pre-wrap}
-.subline{font-size:13px; color:var(--muted)}
-
-/* 左右圓形切換鍵 */
-.nav-arrow{
-  position:absolute; top:50%; transform:translateY(-50%);
-  width:40px; height:40px; display:flex; align-items:center; justify-content:center;
-  border:none; border-radius:999px; background:#fff; color:var(--brand);
-  font-weight:900; font-size:36px; box-shadow:0 4px 12px rgba(0,0,0,.12);
-  cursor:pointer; z-index:2;
-}
-.nav-arrow:disabled{opacity:.45; cursor:not-allowed}
-.nav-arrow.left{ left:8px; }
-.nav-arrow.right{ right:8px; }
-
-@media (max-width:640px){
-  .list-wrap{ padding:0 52px; }
-  .nav-arrow{ width:40px; height:40px; font-size:30px; }
+  /* 左右圓形切換鍵 */
+  .nav-arrow{
+    position:absolute; top:50%; transform:translateY(-50%);
+    width:40px; height:40px; display:flex; align-items:center; justify-content:center;
+    border:none; border-radius:999px; background:#fff; color:var(--brand);
+    font-weight:900; font-size:36px; box-shadow:0 4px 12px rgba(0,0,0,.12);
+    cursor:pointer; z-index:2;
+  }
+  .nav-arrow:disabled{opacity:.45; cursor:not-allowed}
   .nav-arrow.left{ left:8px; }
   .nav-arrow.right{ right:8px; }
-}
 
-/* 隱藏舊頁碼列（若仍存在） */
-.pager{ display:none !important; }
+  @media (max-width:640px){
+    .list-wrap{ padding:0 52px; }
+    .nav-arrow{ width:40px; height:40px; font-size:30px; }
+    .nav-arrow.left{ left:8px; }
+    .nav-arrow.right{ right:8px; }
+  }
 
-/* Pony Station 圖 */
-.poster{ text-align:center; margin-top:20px; }
-.poster img{ max-width:100%; height:auto; border-radius:8px; }
+  /* 隱藏舊頁碼列（若仍存在） */
+  .pager{ display:none !important; }
+
+  /* Pony Station 圖 */
+  .poster{ text-align:center; margin-top:20px; }
+  .poster img{ max-width:100%; height:auto; border-radius:8px; }
 </style>
 </head>
 <body>
 
   <main class="wrap">
     <!-- Logo + Title -->
-    <img class="logo" src="https://i.postimg.cc/xdB0mqvM/The-unicorn-in-the-sky.png" />
+    <img class="logo" src="https://i.postimg.cc/xdB0mqvM/The-unicorn-in-the-sky.png" alt="DCES unicorn logo" />
     <h1>
       <span class="title-main"><span class="title-main-DCES">DCES</span>Fancy Pony Parade</span>
       <span class="title-sub">Artwork Submission</span>
     </h1>
+
+    <!-- 只保留一段 intro -->
     <p class="intro">
-  <span class="br-lg">Saddle Up for Creativity Where Ponies Meet Imagination!</span><br>
-  This Lunar New Year, create your very own Fancy Pony!
-</p>
-<p class="intro">
-  Saddle Up for Creativity Where Ponies Meet Imagination!<br>
-  This Lunar New Year, create your very own Fancy Pony! <br>
-  Families and young artists are invited to<br>  
-  design a colorful, letter-sized pony drawing<br> 
-  bursting with festive spirit!<br> 
-  <span class="highlight-text1">The Magic in 3 Steps:</span><br>
-  <span class="highlight-text1">Create. Celebrate. Capture.</span><br> 
-  Submit your pony artwork,<br> 
-  see it feature on our paper bags,<br>
-  and showcase it on the Pony Parade Wall. <br> 
-  Don’t forget your photo finish!<br> 
-  Let’s fill the celebration with<br>  
-  color, creativity, and joy.<br>
-  <span class="highlight-text">Submit your Fancy Pony today</span><br> 
-  <span class="highlight-text">and join the parade!</span>
-</p>
+      <span class="br-lg">Saddle Up for Creativity Where Ponies Meet Imagination!</span><br>
+      This Lunar New Year, create your very own Fancy Pony! <br>
+      Families and young artists are invited to<br>
+      design a colorful, letter-sized pony drawing<br>
+      bursting with festive spirit!<br>
+      <span class="highlight-text1">The Magic in 3 Steps:</span><br>
+      <span class="highlight-text1">Create. Celebrate. Capture.</span><br>
+      Submit your pony artwork,<br>
+      see it feature on our paper bags,<br>
+      and showcase it on the Pony Parade Wall. <br>
+      Don’t forget your photo finish!<br>
+      Let’s fill the celebration with<br>
+      color, creativity, and joy.<br>
+      <span class="highlight-text">Submit your Fancy Pony today</span><br>
+      <span class="highlight-text">and join the parade!</span>
+    </p>
+
     <!-- Form -->
     <form id="form" class="grid" novalidate>
       <div class="field">
@@ -255,8 +251,6 @@ input[type="checkbox"]{ transform:scale(1.35); margin-right:6px }
         <h2>Recent submissions</h2>
         <div class="actions">
           <span class="panel-info">Total drawings collected: <span id="count">–</span></span>
-          <!-- 引入 Font Awesome（refresh icon） -->
-          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
           <a class="a" href="#" id="Refresh" title="Refresh"><i class="fas fa-rotate-right"></i></a>
         </div>
       </div>
@@ -284,13 +278,11 @@ input[type="checkbox"]{ transform:scale(1.35); margin-right:6px }
   <div class="bg-credit">Illustration design by Demi Tai</div>
 
 <script>
-  // === Replace with your Web App /exec URL ===
   const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzqnplLlJsrf1rgLQmocmeLOTmyub-tj6jNeaMscqG5v7QfxuDZ_sR-D8sjLv3fDPkO_w/exec';
 
   const $ = id => document.getElementById(id);
   const S = v => v == null ? '' : String(v);
 
-  // progress/status helpers
   function setBar(n){
     $('bar').style.width = Math.max(0, Math.min(100, n)) + '%';
     $('pct').textContent = Math.round(n) + '%';
@@ -307,10 +299,8 @@ input[type="checkbox"]{ transform:scale(1.35); margin-right:6px }
     }catch{ return ''; }
   }
 
-  // show chosen file name
   $('file').addEventListener('change', e => { $('fname').textContent = e.target.files[0]?.name || 'no file selected'; });
 
-  // count
   async function refreshCount(){
     try{
       const r = await fetch(SCRIPT_URL + '?action=count', {cache:'no-store'});
@@ -320,10 +310,9 @@ input[type="checkbox"]{ transform:scale(1.35); margin-right:6px }
   }
   $('Refresh').addEventListener('click', (e)=>{ e.preventDefault(); refreshCount(); loadRecent(); });
 
-  // pagination state
   const pageSize = 3;
-  let itemsAll = [];      // 全部最近資料
-  let pageIndex = 0;      // 目前頁次（0-based）
+  let itemsAll = [];
+  let pageIndex = 0;
 
   function renderPage(){
     const list = $('list');
@@ -360,12 +349,10 @@ input[type="checkbox"]{ transform:scale(1.35); margin-right:6px }
       list.appendChild(row);
     }
 
-    // 僅控制左右鍵可用狀態
     $('prevBtn').disabled = (pageIndex === 0);
     $('nextBtn').disabled = (pageIndex >= totalPages-1);
   }
 
-  // load recent items (fetch > store > renderPage)
   async function loadRecent(){
     const list = $('list');
     list.innerHTML = '<div class="item">Loading…</div>';
@@ -376,7 +363,7 @@ input[type="checkbox"]{ transform:scale(1.35); margin-right:6px }
       if (!j.ok) throw new Error(j.error || 'API error');
 
       itemsAll = Array.isArray(j.items) ? j.items : [];
-      pageIndex = 0;   // 顯示最新頁
+      pageIndex = 0;
       renderPage();
     }catch(err){
       list.innerHTML = `<div class="item">Failed to load. <span class="subline">${S(err.message || err)}</span></div>`;
@@ -385,24 +372,22 @@ input[type="checkbox"]{ transform:scale(1.35); margin-right:6px }
     }
   }
 
-  // pager buttons
   $('prevBtn').addEventListener('click', ()=>{ pageIndex = Math.max(0, pageIndex-1); renderPage(); });
   $('nextBtn').addEventListener('click', ()=>{ pageIndex = pageIndex+1; renderPage(); });
 
-  // touch swipe（簡易左右滑動切頁）
+  // touch swipe
   (() => {
     let startX = 0, dx = 0;
     const area = $('list');
     area.addEventListener('touchstart', e => { startX = e.touches[0].clientX; dx = 0; }, {passive:true});
     area.addEventListener('touchmove',  e => { dx = e.touches[0].clientX - startX; }, {passive:true});
     area.addEventListener('touchend',   () => {
-      const threshold = 40; // 滑超過 40px 就換頁
+      const threshold = 40;
       if (dx > threshold){ $('prevBtn').click(); }
       else if (dx < -threshold){ $('nextBtn').click(); }
     }, {passive:true});
   })();
 
-  // base64 helper
   function fileToBase64(file){
     return new Promise((res, rej)=>{
       const fr = new FileReader();
@@ -416,7 +401,6 @@ input[type="checkbox"]{ transform:scale(1.35); margin-right:6px }
     });
   }
 
-  // submit upload (multipart first, then base64 fallback)
   $('form').addEventListener('submit', async (e)=>{
     e.preventDefault();
     const btn = $('submitBtn');
@@ -431,7 +415,6 @@ input[type="checkbox"]{ transform:scale(1.35); margin-right:6px }
     btn.disabled = true;
     say('warn','Uploading…'); setBar(5);
 
-    // (1) multipart
     try{
       const fd = new FormData();
       fd.append('name', $('name').value.trim());
@@ -439,7 +422,7 @@ input[type="checkbox"]{ transform:scale(1.35); margin-right:6px }
       fd.append('title', $('title').value.trim());
       fd.append('description', $('description').value.trim());
       fd.append('consent', $('consent').checked ? 'true' : 'false');
-      fd.append('file', file, file.name); // 必須叫 file
+      fd.append('file', file, file.name);
 
       const r = await fetch(SCRIPT_URL, { method:'POST', body: fd });
       setBar(70);
@@ -454,7 +437,6 @@ input[type="checkbox"]{ transform:scale(1.35); margin-right:6px }
       }
       throw new Error(j.error || 'Server refused');
     }catch(err){
-      // (2) fallback: base64
       say('warn','Network is blocking cross-origin upload. Using safe fallback…'); setBar(30);
       try{
         const b64 = await fileToBase64(file);
@@ -488,11 +470,9 @@ input[type="checkbox"]{ transform:scale(1.35); margin-right:6px }
     }
   });
 
-  // init
   refreshCount();
   loadRecent();
 
-  // 點「Choose File」時觸發實際 input
   document.querySelector('.btn-file').addEventListener('click', ()=> $('file').click());
 </script>
 </body>
