--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     background-size:220px auto;
     background-attachment:fixed;
   }
-  p{ font-size:.6em; line-height:1.4; }
+  p{ font-size:.8em; line-height:1.4; }
 
   /* 內文區 */
   .intro{
@@ -176,7 +176,7 @@
 
     <!-- 只保留一段 intro -->
     <p class="intro">
-      <span class="br-lg">Saddle Up for Creativity Where Ponies Meet Imagination!</span><br>
+      Saddle Up for Creativity Where Ponies Meet Imagination!<br>
       This Lunar New Year, create your very own Fancy Pony! <br>
       Families and young artists are invited to<br>
       design a colorful, letter-sized pony drawing<br>
