--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       <div class="agree">
         <input id="consent" name="consent" type="checkbox" value="true" required>
         <label for="consent" style="font-weight:600">
-          I agree to grant the school marketing rights to print, publicly display, and use my artwork for creative purposes.
+          I grant the school permission to print, display, and use my artwork for promotional and educational purposes.
         </label>
       </div>
 
