--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   }
   p{ font-size:.8em; line-height:1.4; }
 
-  /* 內文區 */
+  /* intro */
   .intro{
     max-width:42rem;
     margin:0 auto 1.25rem auto;
@@ -39,31 +39,17 @@
     font-size:clamp(12px,2.2vw,14px);
     line-height:1.55;
   }
+  .highlight-text{ display:inline-block; font-weight:800; color:#08b3b3; }
+  .highlight-text1{ color:var(--muted); font-size:1.2em; font-weight:600; }
 
-  /* 只在大螢幕顯示換行 */
-  .br-lg{ display:none; }
-  @media (min-width:900px){ .br-lg{ display:inline; } }
-
-  /* CTA 強調 */
-  .highlight-text{
-    display:inline-block;
-    font-weight:800;
-    color:#08b3b3;
-  }
-  .highlight-text1{
-    color:var(--muted);
-    font-size:1.2em;
-    font-weight:600;
-  }
-
-  /* 背景版權 */
+  /* footer credit */
   .bg-credit{
     position:fixed; bottom:8px; left:50%; transform:translateX(-50%);
     font-size:12px; color:#444; background:rgba(255,255,255,0.55);
     padding:3px 8px; border-radius:6px; pointer-events:none; white-space:nowrap;
   }
 
-  /* 外框 */
+  /* frame */
   .wrap{
     max-width:900px; margin:32px auto; padding:20px 18px;
     background:var(--card-bg); border-radius:16px; box-shadow:0 6px 20px rgba(0,0,0,.08);
@@ -76,7 +62,7 @@
   h1 .title-main{ display:block; font-size:clamp(1.2em,5vw,1.4em); font-weight:900; }
   h1 .title-sub{ display:block; font-size:clamp(0.8em,3vw,1em); font-weight:600; color:var(--muted); }
 
-  /* 表單 */
+  /* form */
   .grid{display:block}
   .field{margin:14px 0}
   label{display:block; font-weight:700; margin-bottom:6px}
@@ -86,7 +72,7 @@
   }
   textarea{min-height:80px; resize:vertical}
 
-  /* 檔案選擇 */
+  /* file input */
   .file-row{display:flex; align-items:center; gap:12px}
   .file-wrap{position:relative; display:inline-block}
   .file-wrap input[type="file"]{position:absolute; inset:0; opacity:0; cursor:pointer}
@@ -94,7 +80,7 @@
     display:inline-block; padding:10px 16px; border-radius:12px;
     background:var(--brand); color:#fff; font-weight:800; border:none; cursor:pointer;
     transition:filter .12s ease, transform .02s ease; font-size:1.1em;
-  }  
+  }
   .btn-file:hover{filter:brightness(1.05)}
   .btn-file:active{transform:translateY(1px)}
   .file-name{font-size:14px; color:var(--muted)}
@@ -103,7 +89,7 @@
   .agree input{margin-top:3px}
   input[type="checkbox"]{ transform:scale(1.35); margin-right:6px }
 
-  /* 主要按鈕 */
+  /* buttons */
   .btn{
     display:inline-block; padding:12px 18px; border-radius:14px; border:none;
     background:var(--brand); color:#fff; font-weight:900; cursor:pointer;
@@ -113,14 +99,14 @@
   .btn:active{transform:translateY(1px)}
   .btn[disabled]{opacity:.6; cursor:not-allowed}
 
-  /* 狀態與進度條 */
+  /* status & progress */
   .status{margin:12px 0 6px 0; font-weight:700}
   .ok{color:var(--ok)} .warn{color:var(--warn)} .err{color:var(--err)}
   .sub{color:var(--muted); font-weight:600}
   .bar{height:8px; background:#e5e7eb; border-radius:999px; overflow:hidden; margin-top:10px}
   .bar>i{display:block; height:100%; width:0%; background:linear-gradient(90deg,var(--brand),var(--ok)); transition:width .2s ease}
 
-  /* Recent submissions（左右切頁） */
+  /* recent panel */
   .panel{margin-top:26px; padding:18px; background:var(--card-bg); border-radius:16px}
   .panel-header{display:flex; flex-wrap:wrap; justify-content:space-between; align-items:center; gap:10px}
   .panel-header h2{margin:0; font-size:26px}
@@ -129,7 +115,7 @@
   .a{color:var(--brand); text-decoration:none; font-weight:800}
   .a:hover{text-decoration:underline}
 
-  /* 為箭頭預留左右空間 */
+  /* list with arrows */
   .list-wrap{ position:relative; padding:0 50px; }
   .list{display:flex; flex-direction:column; gap:10px; min-height:170px}
   .item{padding:12px; border:1px solid #e5e7eb; border-radius:12px; background:#fff}
@@ -137,7 +123,6 @@
   .desc{margin-top:4px; white-space:pre-wrap}
   .subline{font-size:13px; color:var(--muted)}
 
-  /* 左右圓形切換鍵 */
   .nav-arrow{
     position:absolute; top:50%; transform:translateY(-50%);
     width:40px; height:40px; display:flex; align-items:center; justify-content:center;
@@ -156,10 +141,9 @@
     .nav-arrow.right{ right:8px; }
   }
 
-  /* 隱藏舊頁碼列（若仍存在） */
   .pager{ display:none !important; }
 
-  /* Pony Station 圖 */
+  /* poster */
   .poster{ text-align:center; margin-top:20px; }
   .poster img{ max-width:100%; height:auto; border-radius:8px; }
 </style>
@@ -167,14 +151,14 @@
 <body>
 
   <main class="wrap">
-    <!-- Logo + Title -->
+    <!-- MAINTAIN: Header -->
     <img class="logo" src="https://i.postimg.cc/xdB0mqvM/The-unicorn-in-the-sky.png" alt="DCES unicorn logo" />
     <h1>
       <span class="title-main"><span class="title-main-DCES">DCES</span>Fancy Pony Parade</span>
       <span class="title-sub">Artwork Submission</span>
     </h1>
 
-    <!-- 只保留一段 intro -->
+    <!-- MAINTAIN: Intro -->
     <p class="intro">
       Saddle Up for Creativity Where Ponies Meet Imagination!<br>
       This Lunar New Year, create your very own Fancy Pony! <br>
@@ -193,7 +177,7 @@
       <span class="highlight-text">and join the parade!</span>
     </p>
 
-    <!-- Form -->
+    <!-- MAINTAIN: Form -->
     <form id="form" class="grid" novalidate>
       <div class="field">
         <label for="name">Your Name *</label>
@@ -210,18 +194,25 @@
         <input id="title" name="title" type="text" placeholder="Your pony's name" required>
       </div>
 
+      <!-- MAINTAIN: File Upload (images only) -->
       <div class="field">
         <label>Upload File *</label>
         <div class="file-row">
           <span class="file-wrap">
             <button class="btn-file" type="button">Choose File</button>
-            <input id="file" name="file" type="file" accept=".jpg,.jpeg,.png,.pdf" required>
+            <input id="file" name="file" type="file"
+                   accept="image/jpeg,image/png" required>
           </span>
           <span id="fname" class="file-name">No file selected</span>
         </div>
-        <div class="sub" style="margin-top:8px">
-          File size must be between <strong>1&nbsp;MB</strong> and <strong>5&nbsp;MB</strong>.
-          Recommended: <strong>150–300&nbsp;ppi</strong> (Letter size scan typically &gt; 1&nbsp;MB).
+
+        <!-- Live file info -->
+        <div id="fileInfo" class="sub" style="margin-top:6px;"></div>
+
+        <!-- Guidance text (images only) -->
+        <div class="sub" style="margin-top:6px">
+          JPG or PNG only. File size must be between <strong>1&nbsp;MB</strong> and <strong>5&nbsp;MB</strong>.
+          Recommended scan: <strong>150–300&nbsp;ppi</strong> (Letter size scan typically &gt; 1&nbsp;MB).
         </div>
       </div>
 
@@ -245,7 +236,7 @@
       <div id="pct" class="sub" style="margin-top:4px">0%</div>
     </form>
 
-    <!-- Recent submissions with left/right arrows only -->
+    <!-- MAINTAIN: Recent Submissions -->
     <section class="panel">
       <div class="panel-header">
         <h2>Recent submissions</h2>
@@ -264,7 +255,7 @@
       </div>
     </section>
 
-    <!-- Pony Station Image -->
+    <!-- MAINTAIN: Poster -->
     <div class="poster">
       <h2>
         <span class="title-main">CNY Fancy Pony Station</span><br>
@@ -274,33 +265,51 @@
     </div>
   </main>
 
-  <!-- 背景版權提示 -->
   <div class="bg-credit">Illustration design by Demi Tai</div>
 
 <script>
+  /* ===== CONFIG ===== */
   const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzqnplLlJsrf1rgLQmocmeLOTmyub-tj6jNeaMscqG5v7QfxuDZ_sR-D8sjLv3fDPkO_w/exec';
+  const MIN_MB = 1;
+  const MAX_MB = 5;
+  const ALLOWED_MIME = new Set(['image/jpeg','image/png']);
 
+  /* ===== Helpers ===== */
   const $ = id => document.getElementById(id);
   const S = v => v == null ? '' : String(v);
+  function setBar(n){ $('bar').style.width = Math.max(0, Math.min(100, n)) + '%'; $('pct').textContent = Math.round(n) + '%'; }
+  function say(cls, msg){ const el=$('status'); el.className='status ' + (cls||''); el.textContent = msg || ''; }
+  function timeStr(v){ try{ const d = v instanceof Date ? v : new Date(v); return isNaN(d.getTime()) ? '' : d.toLocaleString(); }catch{ return ''; } }
+  function fmtMB(bytes){ return (bytes / (1024*1024)).toFixed(2); }
 
-  function setBar(n){
-    $('bar').style.width = Math.max(0, Math.min(100, n)) + '%';
-    $('pct').textContent = Math.round(n) + '%';
-  }
-  function say(cls, msg){
-    const el = $('status');
-    el.className = 'status ' + (cls||'');
-    el.textContent = msg || '';
-  }
-  function timeStr(v){
-    try{
-      const d = v instanceof Date ? v : new Date(v);
-      return isNaN(d.getTime()) ? '' : d.toLocaleString();
-    }catch{ return ''; }
-  }
+  /* ===== File UI ===== */
+  document.querySelector('.btn-file').addEventListener('click', ()=> $('file').click());
 
-  $('file').addEventListener('change', e => { $('fname').textContent = e.target.files[0]?.name || 'no file selected'; });
+  $('file').addEventListener('change', e => {
+    const f = e.target.files[0];
+    if (!f){ $('fname').textContent = 'No file selected'; $('fileInfo').textContent = ''; return; }
 
+    $('fname').textContent = f.name;
+    const mb = Number(fmtMB(f.size));
+    const typeOk = ALLOWED_MIME.has(f.type);
+    const sizeOk = (mb >= MIN_MB && mb <= MAX_MB);
+
+    const info = `Selected: ${f.name} (${mb} MB)`;
+    const el = $('fileInfo');
+    if (typeOk && sizeOk){
+      el.textContent = info + ' — OK';
+      el.style.color = '#16a34a';
+    }else{
+      const why = [
+        typeOk ? '' : 'type must be JPG or PNG',
+        sizeOk ? '' : `size must be ${MIN_MB}–${MAX_MB} MB`
+      ].filter(Boolean).join('; ');
+      el.textContent = info + ' — ' + why;
+      el.style.color = '#b91c1c';
+    }
+  });
+
+  /* ===== Recent count/list ===== */
   async function refreshCount(){
     try{
       const r = await fetch(SCRIPT_URL + '?action=count', {cache:'no-store'});
@@ -366,7 +375,7 @@
       pageIndex = 0;
       renderPage();
     }catch(err){
-      list.innerHTML = `<div class="item">Failed to load. <span class="subline">${S(err.message || err)}</span></div>`;
+      list.innerHTML = `<div class="item">Failed to load. <span class="subline">${(err && err.message) || err}</span></div>`;
       $('prevBtn').disabled = true;
       $('nextBtn').disabled = true;
     }
@@ -388,6 +397,7 @@
     }, {passive:true});
   })();
 
+  /* ===== Upload (multipart + base64 fallback) ===== */
   function fileToBase64(file){
     return new Promise((res, rej)=>{
       const fr = new FileReader();
@@ -405,11 +415,17 @@
     e.preventDefault();
     const btn = $('submitBtn');
     const file = $('file').files[0];
+
     setBar(0); say('', '');
 
     if (!file){ say('err','Please choose a file.'); return; }
-    const sizeMB = file.size / (1024*1024);
-    if (sizeMB < 1 || sizeMB > 5){ say('err','File must be between 1 MB and 5 MB.'); return; }
+
+    const mb = file.size / (1024*1024);
+    const typeOk = ALLOWED_MIME.has(file.type);
+    const sizeOk = (mb >= MIN_MB && mb <= MAX_MB);
+
+    if (!typeOk){ say('err','Only JPG or PNG files are accepted.'); return; }
+    if (!sizeOk){ say('err', `File must be between ${MIN_MB} and ${MAX_MB} MB.`); return; }
     if (!$('consent').checked){ say('err','Please agree to the consent.'); return; }
 
     btn.disabled = true;
@@ -431,12 +447,17 @@
 
       if (j.ok){
         setBar(100); say('ok','Upload successful.');
-        $('form').reset(); $('fname').textContent='no file selected'; setTimeout(()=>setBar(0), 900);
+        $('form').reset();
+        $('fname').textContent = 'No file selected';
+        $('fileInfo').textContent = '';
+        setTimeout(()=>setBar(0), 900);
         refreshCount(); loadRecent();
-        btn.disabled = false; return;
+        btn.disabled = false;
+        return;
       }
       throw new Error(j.error || 'Server refused');
     }catch(err){
+      // fallback
       say('warn','Network is blocking cross-origin upload. Using safe fallback…'); setBar(30);
       try{
         const b64 = await fileToBase64(file);
@@ -456,8 +477,11 @@
         const j2 = await r2.json();
 
         if (j2.ok){
-          setBar(100); say('ok','Upload sent. Waiting for confirmation…');
-          $('form').reset(); $('fname').textContent='no file selected'; setTimeout(()=>setBar(0), 900);
+          setBar(100); say('ok','Upload sent. Waiting for confirmation.');
+          $('form').reset();
+          $('fname').textContent = 'No file selected';
+          $('fileInfo').textContent = '';
+          setTimeout(()=>setBar(0), 900);
           refreshCount(); loadRecent();
         }else{
           say('err','Upload failed: ' + (j2.error || 'Unknown error'));
@@ -470,10 +494,9 @@
     }
   });
 
+  /* Init */
   refreshCount();
   loadRecent();
-
-  document.querySelector('.btn-file').addEventListener('click', ()=> $('file').click());
 </script>
 </body>
 </html>
