--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <!-- MAINTAIN: Poster -->
     <div class="poster">
       <h2>
-        <span class="title-main">CNY Fancy Pony Station</span><br>
+        <span class="title-main">CNY Fancy Pony Parade Station</span><br>
         <span class="title-sub">Step-by-Step Guide</span>
       </h2>
       <img src="https://i.postimg.cc/V6fKhGRR/CNY-Fancy-Pony-Station-Step-by-Step-Guide.png" alt="CNY Fancy Pony Station – Step-by-Step Guide">
