--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <style>
   :root{
-    --DCES:#2563EB;
+    --DCES:#45D1D1;
     --brand:#43C7C7;
     --ok:#16a34a;
     --warn:#b45309;
@@ -39,7 +39,7 @@
     font-size:clamp(12px,2.2vw,14px);
     line-height:1.55;
   }
-  .highlight-text{ display:inline-block; font-weight:800; color:#08b3b3; }
+  .highlight-text{ display:inline-block; font-weight:800; color:#08b3b3;font-size:1.3em; }
   .highlight-text1{ color:var(--muted); font-size:1.2em; font-weight:600; }
 
   /* footer credit */
@@ -152,10 +152,9 @@
 
   <main class="wrap">
     <!-- MAINTAIN: Header -->
-    <img class="logo" src="https://i.postimg.cc/xdB0mqvM/The-unicorn-in-the-sky.png" alt="DCES unicorn logo" />
+    <img class="logo" src="https://i.postimg.cc/kGcx6LdB/CNY-Fancy-Pony-Parade.png" alt="DCES unicorn logo" />
     <h1>
-      <span class="title-main"><span class="title-main-DCES">DCES</span>Fancy Pony Parade</span>
-      <span class="title-sub">Artwork Submission</span>
+      <span class="title-main"><span class="title-main-DCES">DCES</span></span>
     </h1>
 
     <!-- MAINTAIN: Intro -->
